--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+background-color: #222;
+width: 100%;
+
+}
+
+hr{
+    border-color: lightgrey;
+}
