--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-background-color: #222;
+// background-color: #222;
 width: 100%;
 
 }
@@ -8,3 +8,5 @@ width: 100%;
 hr{
     border-color: lightgrey;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
