--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,144 @@
-<div class="uk-position-center full-width">
-  <div uk-grid class="uk-padding-remove">
-    <div class="uk-width-1-6@l uk-width-1-1 uk-background-primary uk-height-large menu uk-padding-remove">
-      <div class=" uk-padding list" uk-grid>
-        <div class="icons uk-width-1-1@m uk-width-1-6">
-          <a
-            routerLink=""
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-            class=""
-            uk-icon="icon: user;"
-          ></a>
-        </div>
-        <div class="icons uk-width-1-1@m uk-width-1-6">
-          <a
-            routerLink="/contacto"
-            routerLinkActive="active"
-            class=""
-            uk-icon="icon: receiver;"
-          ></a>
-        </div>
-
-        <div class="icons uk-width-1-1@m uk-width-1-6">
-          <a
-            routerLink="/informacion"
-            routerLinkActive="active"
-            class=""
-            uk-icon="icon: users;"
-          ></a>
-        </div>
-        <div class="icons uk-width-1-1@m uk-width-1-6">
-          <a
-            routerLink="/estudios"
-            routerLinkActive="active"
-            class=""
-            uk-icon="icon: bookmark;"
-          ></a>
+<div class="layout uk-container uk-section-large">
+  <div
+    class="uk-grid-match uk-grid-collapse uk-grid-small uk-text-center"
+    uk-grid
+  >
+    <div class="uk-width-auto@s uk-height-large">
+      <div class="uk-background-secondary uk-light">
+        <div class="uk-width-1-2@s uk-width-2-5@m">
+          <!-- LISTA MENU -->
+          <ul class="uk-list">
+            <li>
+              <a
+                routerLink=""
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                ><mat-icon>account_circle</mat-icon>
+                <span class="uk-hidden@s"> Perfil</span></a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/contacto"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                ><mat-icon>phone</mat-icon
+                ><span class="uk-hidden@s"> Contacto</span></a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/informacion"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                ><mat-icon>people</mat-icon
+                ><span class="uk-hidden@s"> Referencias</span></a
+              >
+            </li>
+            <li>
+              <a
+                routerLink="/estudios"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                ><mat-icon>menu_book</mat-icon
+                ><span class="uk-hidden@s"> Estudios</span></a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="uk-width-5-6@l uk-height-large uk-background-muted">
-      <div uk-grid>
-        <div class="image-content uk-width-1-3@m uk-background-secondary"></div>
-        <div
-          class="
-            uk-width-2-3@m uk-height-large uk-overflow-auto
-            body
-            hide-scrollbar
-          "
-        >
-          <router-outlet></router-outlet>
-        </div>
+    <div class="uk-width-1-4@s uk-height-xlarge">
+      <div class="uk-background-primary image-content"></div>
+    </div>
+    <div class="uk-width-expand@s uk-height-large uk-overflow-auto">
+      <div class="uk-background-secondary uk-light">
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
+  <div class="uk-grid-collapse uk-grid-small" uk-grid>
+    <!-- <div
+      class="uk-background-primary uk-width-1-6@s uk-width-1-1 uk-height-small"
+    ></div>
+    <div
+      class="uk-background-muted uk-width-5-6@s uk-width-1-1 uk-height-small"
+    >
+      <div class="uk-grid-collapse" uk-grid>
+        <div
+          class="
+            uk-height-small uk-width-1-3@s uk-width-1-1 uk-background-secondary
+          "
+        ></div>
+        <div
+          class="
+            uk-height-small uk-width-2-3@s uk-width-1-1 uk-background-primary
+          "
+        ></div>
+      </div> -->
+  </div>
 </div>
+<!-- <div class="uk-margin-remove uk-section-large@s uk-align-center@s">
+    <div uk-grid class="uk-padding-remove">
+      <div
+        class="
+          uk-width-1-6@l uk-width-1-1 uk-background-primary
+          menu
+          uk-padding-remove
+        "
+      >
+        <div class="uk-padding list" uk-grid>
+          <div class="icons uk-width-1-1@m uk-width-1-6">
+            <a
+              routerLink=""
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+              class=""
+              uk-icon="icon: user;"
+            ></a>
+          </div>
+          <div class="icons uk-width-1-1@m uk-width-1-6">
+            <a
+              routerLink="/contacto"
+              routerLinkActive="active"
+              class=""
+              uk-icon="icon: receiver;"
+            ></a>
+          </div>
+
+          <div class="icons uk-width-1-1@m uk-width-1-6">
+            <a
+              routerLink="/informacion"
+              routerLinkActive="active"
+              class=""
+              uk-icon="icon: users;"
+            ></a>
+          </div>
+          <div class="icons uk-width-1-1@m uk-width-1-6">
+            <a
+              routerLink="/estudios"
+              routerLinkActive="active"
+              class=""
+              uk-icon="icon: bookmark;"
+            ></a>
+          </div>
+        </div>
+      </div>
+      <div class="uk-width-5-6@l content uk-background-muted">
+        <div uk-grid>
+          <div
+            class="image-content uk-width-1-3@m uk-background-secondary"
+          ></div>
+          <div
+            class="
+              uk-width-2-3@m uk-height-large uk-overflow-auto
+              body
+              hide-scrollbar
+            "
+          >
+            <router-outlet></router-outlet>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
