--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,43 +1,67 @@
-.full-width{
-  max-width: 80%;
-  .menu {
-    border: 1px solid black;
-    background-color: black;
-    max-width: 10%;
-    .list {
-      margin-top: 30px;
-      .icons {
-        margin-bottom: 50px;
+.layout {
+  .uk-list {
+    margin-bottom: 30px;
+    li {
+      padding: 20px;
+
+      a {
+        text-decoration: none;
+        float: left;
+
+        .active * {
+          color: #6e86ff;
+        }
+
+        mat-icon {
+          float: left;
+          margin-right: 15px;
+        }
       }
+    }
+  }
+}
+
+.menu {
+  border: 1px solid black;
+  background-color: black;
+
+  .list {
+    .icons {
+      * {
+        color: #eee;
+      }
+
       .active {
         color: #6e86ff;
       }
     }
   }
-  .image-content {
-    position: relative;
-    top: -40px;
-    height: 530px;
-    background-image: url(../../assets/img/fotoperfilfrontal.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    box-shadow: 0 32px 84px 0 rgb(0 0 0 / 50%);
-  }
-  .hide-scrollbar {
-    background-color: #eee;
-    overflow-y: scroll; /* Add the ability to scroll */
-  }
-
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .hide-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .hide-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
+}
+.content {
+  height: 450px;
+}
+.image-content {
+  position: relative;
+  top: -40px;
+  height: 530px;
+  background-image: url(../../assets/img/fotoperfilfrontal.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  box-shadow: 0 32px 84px 0 rgb(0 0 0 / 50%);
+}
+.hide-scrollbar {
+  background-color: #eee;
+  overflow-y: scroll; /* Add the ability to scroll */
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
