arreglo en diseño

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,8 @@
     class="uk-grid-match uk-grid-collapse uk-grid-small uk-text-center"
     uk-grid
   >
-    <div class="uk-width-auto@s uk-height-large">
-      <div class="uk-background-secondary uk-light">
+    <div class="uk-width-auto@s uk-height-xlarge uk-margin-bottom" menu>
+      <div class="uk-background-secondary uk-light uk-padding-small">
         <div class="uk-width-1-2@s uk-width-2-5@m">
           <!-- LISTA MENU -->
           <ul class="uk-list">
