--- a/src/app/home/studies/studies.component.html
+++ b/src/app/home/studies/studies.component.html
@@ -22,7 +22,7 @@
       <div class="uk-width-1-1 width">
         <h2 class="title">
           <span uk-icon="icon: bookmark; ratio: 1.5"></span>Colegio Ingles
-          h2mericano
+          americano
         </h2>
         <div class="text"><p>Estudios Secundarios</p></div>
         <div class="text"><p>Ibagué - Tolima (12° semestre)</p></div>
