add new information

--- a/src/app/home/body/body.component.html
+++ b/src/app/home/body/body.component.html
@@ -46,6 +46,14 @@
       </div>
       <div class="uk-width-1-2@l uk-width">
         <div class="icon"><span uk-icon="icon: laptop; ratio: 1.5"></span></div>
+        <div class="title"><h4>AfroUp</h4></div>
+        <div class="text"><p>Desarrollador Frontend Angular</p></div>
+        <div class="text"><p>6 meses laborando</p></div>
+        <div class="text"><p>Jefe inmediato: Jenniffer Mayren Urrutia Briñez</p></div>
+        <div class="text"><p>Teléfono: 3196768936</p></div>
+      </div>
+      <div class="uk-width-1-2@l uk-width">
+        <div class="icon"><span uk-icon="icon: laptop; ratio: 1.5"></span></div>
         <div class="title"><h4>Sealve Asistencias</h4></div>
         <div class="text"><p>Conductor Elegido</p></div>
         <div class="text"><p>Un año laborado</p></div>
