--- a/src/app/home/studies/studies.component.html
+++ b/src/app/home/studies/studies.component.html
@@ -42,21 +42,33 @@
 
   <div class="services">
     <div class="uk-grid">
-      <div class="icon-title">
+      <div class="icon-title uk-padding-remove-bottom uk-align-center ">
         <h2 class="title">
-          <span uk-icon="icon: code; ratio: 1.5"></span>Habilidades
+          Habilidades<span class="uk-padding uk-padding-remove-bottom" uk-icon="icon: code; ratio: 1.5"></span>
         </h2>
       </div>
     </div>
     <div class="service-group">
       <ul uk-accordion class="uk-container">
-        <li class="uk-open">
+        <li>
           <p class="uk-accordion-title" href="#">Angular</p>
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  70%
+                <div class="progress-bar" role="progressbar" style="width: 60%">
+                  60%
+                </div>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li>
+          <p class="uk-accordion-title" href="#">Java</p>
+          <div class="uk-accordion-content">
+            <div class="container">
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 30%">
+                  30%
                 </div>
               </div>
             </div>
@@ -67,8 +79,8 @@
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  90%
+                <div class="progress-bar" role="progressbar" style="width: 80%">
+                  80%
                 </div>
               </div>
             </div>
@@ -79,8 +91,8 @@
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  60%
+                <div class="progress-bar" role="progressbar" style="width: 40%">
+                  40%
                 </div>
               </div>
             </div>
@@ -91,8 +103,8 @@
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  70%
+                <div class="progress-bar" role="progressbar" style="width: 40%">
+                  40%
                 </div>
               </div>
             </div>
@@ -103,8 +115,8 @@
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  60%
+                <div class="progress-bar" role="progressbar" style="width: 40%">
+                  40%
                 </div>
               </div>
             </div>
@@ -116,7 +128,7 @@
             <div class="container">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 70%">
-                  80%
+                  70%
                 </div>
               </div>
             </div>
@@ -127,8 +139,8 @@
           <div class="uk-accordion-content">
             <div class="container">
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 70%">
-                  70%
+                <div class="progress-bar" role="progressbar" style="width: 50%">
+                  50%
                 </div>
               </div>
             </div>
