--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
       <div class="uk-background-secondary uk-light uk-padding-small">
         <div class="uk-width-1-2@s uk-width-2-5@m">
           <!-- LISTA MENU -->
-          <ul class="uk-list">
+          <ul class="uk-list list">
             <li>
               <a
                 routerLink=""
